logs/dag_id=build_data_mart_python/run_id=scheduled__2025-04-14T17:14:00+00:00/task_id=create_mart_bike_rentals_working_vs_weekend.sql/attempt=1.log
[2025-04-14T17:15:53.447+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-04-14T17:15:53.457+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: build_data_mart_python.create_mart_bike_rentals_working_vs_weekend.sql scheduled__2025-04-14T17:14:00+00:00 [queued]>
[2025-04-14T17:15:53.464+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: build_data_mart_python.create_mart_bike_rentals_working_vs_weekend.sql scheduled__2025-04-14T17:14:00+00:00 [queued]>
[2025-04-14T17:15:53.464+0000] {taskinstance.py:2867} INFO - Starting attempt 1 of 1
[2025-04-14T17:15:53.485+0000] {taskinstance.py:2890} INFO - Executing <Task(PythonOperator): create_mart_bike_rentals_working_vs_weekend.sql> on 2025-04-14 17:14:00+00:00
[2025-04-14T17:15:53.495+0000] {logging_mixin.py:190} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=6608) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-04-14T17:15:53.497+0000] {standard_task_runner.py:72} INFO - Started process 6615 to run task
[2025-04-14T17:15:53.497+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'build_data_mart_python', 'create_mart_bike_rentals_working_vs_weekend.sql', 'scheduled__2025-04-14T17:14:00+00:00', '--job-id', '1382', '--raw', '--subdir', 'DAGS_FOLDER/mart.py', '--cfg-path', '/tmp/tmpnvd1hzsq']
[2025-04-14T17:15:53.500+0000] {standard_task_runner.py:105} INFO - Job 1382: Subtask create_mart_bike_rentals_working_vs_weekend.sql
[2025-04-14T17:15:53.555+0000] {task_command.py:467} INFO - Running <TaskInstance: build_data_mart_python.create_mart_bike_rentals_working_vs_weekend.sql scheduled__2025-04-14T17:14:00+00:00 [running]> on host d2754bd7ccae
[2025-04-14T17:15:53.668+0000] {taskinstance.py:3134} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='build_data_mart_python' AIRFLOW_CTX_TASK_ID='create_mart_bike_rentals_working_vs_weekend.sql' AIRFLOW_CTX_EXECUTION_DATE='2025-04-14T17:14:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-04-14T17:14:00+00:00'
[2025-04-14T17:15:53.673+0000] {taskinstance.py:732} INFO - ::endgroup::
[2025-04-14T17:15:53.737+0000] {taskinstance.py:3313} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/mart.py", line 21, in execute_sql_file_and_log_rows
    cursor.execute(sql_script)
psycopg2.errors.SyntaxError: syntax error at or near "G"
LINE 9: G
        ^

[2025-04-14T17:15:53.761+0000] {taskinstance.py:1226} INFO - Marking task as FAILED. dag_id=build_data_mart_python, task_id=create_mart_bike_rentals_working_vs_weekend.sql, run_id=scheduled__2025-04-14T17:14:00+00:00, execution_date=20250414T171400, start_date=20250414T171553, end_date=20250414T171553
[2025-04-14T17:15:53.882+0000] {taskinstance.py:341} INFO - ::group::Post task execution logs
[2025-04-14T17:15:53.884+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 1382 for task create_mart_bike_rentals_working_vs_weekend.sql (syntax error at or near "G"
LINE 9: G
        ^
; 6615)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3006, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 274, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3161, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3185, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/mart.py", line 21, in execute_sql_file_and_log_rows
    cursor.execute(sql_script)
psycopg2.errors.SyntaxError: syntax error at or near "G"
LINE 9: G
        ^

[2025-04-14T17:15:53.947+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-04-14T17:15:53.968+0000] {taskinstance.py:3901} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-04-14T17:15:53.971+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
